Remove sensitive information from notebook
Removed sensitive Hugging Face access key and repo ID.

--- a/model_customer_churn.ipynb
+++ b/model_customer_churn.ipynb
@@ -4387,8 +4387,8 @@
     {
       "cell_type": "code",
       "source": [
-        "access_key = \"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\"  # Your Hugging Face token created from access keys in write mode\n",
-        "repo_id = \"sainath121198/sain\"  # Your Hugging Face space id\n",
+        "access_key = \""  # Your Hugging Face token created from access keys in write mode\n",
+        "repo_id = \""  # Your Hugging Face space id\n",
         "\n",
         "# Login to Hugging Face platform with the access token\n",
         "login(token=access_key)\n",
